Improve placeholder media to prevent layout jumps

--- a/packages/block-library/src/cover/style.native.scss
+++ b/packages/block-library/src/cover/style.native.scss
@@ -149,7 +149,7 @@
 }
 
 .video {
-	border: 1px solid $blue-medium;
+	border: 2px solid $blue-medium;
 }
 
 .mediaPreview {
